--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <div class="hero-text-box">
                 <h1>Dobrodošli v<br>svetu slaščic.</h1>
-                <a class="btn btn-full js--scroll-to-start" href="resources/cenik.pdf" target="_blank">Cenik</a>
+                <a class="btn btn-full js--scroll-to-start" href="resources/cenik1.pdf" target="_blank">Cenik</a>
                 <a class="btn btn-ghost js--scroll-to-plans" href="resources/recepti.pdf" target="_blank">Recepti</a>
             </div>
             
