--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			
             <nav>
                 <div class="row">
-                    <img src="resources/img/logo.png" alt="Alpegel logo" class="logo">
+                    <img src="resources/img/logo2.png" alt="Alpegel logo" class="logo">
 				</div>
             </nav>
             <div class="hero-text-box">
